--- a/BankTask/MainForm.ru.resx
+++ b/BankTask/MainForm.ru.resx
@@ -117,8 +117,131 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="$this.AutoSizeMode" type="System.Windows.Forms.AutoSizeMode, System.Windows.Forms">
-    <value>GrowAndShrink</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnExit.Location" type="System.Drawing.Point, System.Drawing">
+    <value>947, 459</value>
+  </data>
+  <data name="btnClearClientFilter.Location" type="System.Drawing.Point, System.Drawing">
+    <value>307, 444</value>
+  </data>
+  <data name="btnClearClientFilter.Size" type="System.Drawing.Size, System.Drawing">
+    <value>100, 28</value>
+  </data>
+  <data name="btnClearClientFilter.Text" xml:space="preserve">
+    <value>Очистить</value>
+  </data>
+  <data name="btnFilterClients.Location" type="System.Drawing.Point, System.Drawing">
+    <value>307, 408</value>
+  </data>
+  <data name="btnFilterClients.Size" type="System.Drawing.Size, System.Drawing">
+    <value>100, 28</value>
+  </data>
+  <data name="btnFilterClients.Text" xml:space="preserve">
+    <value>Фильтр</value>
+  </data>
+  <data name="dtpClientDateTo.Location" type="System.Drawing.Point, System.Drawing">
+    <value>101, 445</value>
+  </data>
+  <data name="lblClientDateTo.Location" type="System.Drawing.Point, System.Drawing">
+    <value>62, 444</value>
+  </data>
+  <data name="lblClientDateTo.Size" type="System.Drawing.Size, System.Drawing">
+    <value>33, 23</value>
+  </data>
+  <data name="lblClientDateTo.Text" xml:space="preserve">
+    <value>До:</value>
+  </data>
+  <data name="dtpClientDateFrom.Location" type="System.Drawing.Point, System.Drawing">
+    <value>101, 411</value>
+  </data>
+  <data name="lblClientDateFrom.Location" type="System.Drawing.Point, System.Drawing">
+    <value>63, 415</value>
+  </data>
+  <data name="lblClientDateFrom.Size" type="System.Drawing.Size, System.Drawing">
+    <value>32, 23</value>
+  </data>
+  <data name="lblClientDateFrom.Text" xml:space="preserve">
+    <value>От:</value>
+  </data>
+  <data name="btnPrint.Location" type="System.Drawing.Point, System.Drawing">
+    <value>947, 423</value>
+  </data>
+  <data name="btnExportExcel.Location" type="System.Drawing.Point, System.Drawing">
+    <value>840, 423</value>
+  </data>
+  <data name="btnImportExcel.Location" type="System.Drawing.Point, System.Drawing">
+    <value>734, 423</value>
+  </data>
+  <data name="btnDeleteClient.Location" type="System.Drawing.Point, System.Drawing">
+    <value>627, 423</value>
+  </data>
+  <data name="btnEditClient.Location" type="System.Drawing.Point, System.Drawing">
+    <value>520, 423</value>
+  </data>
+  <data name="btnAddClient.Location" type="System.Drawing.Point, System.Drawing">
+    <value>414, 423</value>
+  </data>
+  <data name="tabPage1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>1059, 559</value>
+  </data>
+  <data name="btnClearRequestFilter.Location" type="System.Drawing.Point, System.Drawing">
+    <value>262, 442</value>
+  </data>
+  <data name="btnClearRequestFilter.Size" type="System.Drawing.Size, System.Drawing">
+    <value>99, 28</value>
+  </data>
+  <data name="btnClearRequestFilter.Text" xml:space="preserve">
+    <value>Очистить</value>
+  </data>
+  <data name="btnFilterRequests.Location" type="System.Drawing.Point, System.Drawing">
+    <value>262, 408</value>
+  </data>
+  <data name="btnFilterRequests.Size" type="System.Drawing.Size, System.Drawing">
+    <value>99, 28</value>
+  </data>
+  <data name="btnFilterRequests.Text" xml:space="preserve">
+    <value>Фильтр</value>
+  </data>
+  <data name="dtpRequestDateTo.Location" type="System.Drawing.Point, System.Drawing">
+    <value>56, 443</value>
+  </data>
+  <data name="lblRequestDateTo.Location" type="System.Drawing.Point, System.Drawing">
+    <value>13, 443</value>
+  </data>
+  <data name="lblRequestDateTo.Size" type="System.Drawing.Size, System.Drawing">
+    <value>37, 23</value>
+  </data>
+  <data name="lblRequestDateTo.Text" xml:space="preserve">
+    <value>До:</value>
+  </data>
+  <data name="dtpRequestDateFrom.Location" type="System.Drawing.Point, System.Drawing">
+    <value>56, 409</value>
+  </data>
+  <data name="lblRequestDateFrom.Location" type="System.Drawing.Point, System.Drawing">
+    <value>13, 409</value>
+  </data>
+  <data name="lblRequestDateFrom.Size" type="System.Drawing.Size, System.Drawing">
+    <value>37, 23</value>
+  </data>
+  <data name="lblRequestDateFrom.Text" xml:space="preserve">
+    <value>От:</value>
+  </data>
+  <data name="btnDeleteRequest.Location" type="System.Drawing.Point, System.Drawing">
+    <value>708, 419</value>
+  </data>
+  <data name="btnEditRequest.Location" type="System.Drawing.Point, System.Drawing">
+    <value>601, 419</value>
+  </data>
+  <data name="btnAddRequest.Location" type="System.Drawing.Point, System.Drawing">
+    <value>495, 419</value>
+  </data>
+  <data name="tabPage2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>1059, 559</value>
+  </data>
+  <data name="tabControl1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>1067, 588</value>
+  </data>
+  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
+    <value>1098, 590</value>
   </data>
 </root>
